@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/zd1211-firmware
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/zd1211-firmware/ChangeLog,v 1.2 2006/08/12 15:59:44 dsd Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/zd1211-firmware/ChangeLog,v 1.3 2006/10/20 21:03:03 dsd Exp $
+
+  20 Oct 2006; Daniel Drake <dsd@gentoo.org> zd1211-firmware-1.2.ebuild:
+  Stable on amd64 and x86
 
 *zd1211-firmware-1.2 (12 Aug 2006)
 
